--- a/bindings-sc3.cabal
+++ b/bindings-sc3.cabal
@@ -25,7 +25,7 @@ library
   build-depends:    base >= 3 && < 5
                   , bindings-DSL >= 1.0 && < 1.1
   frameworks:       Carbon, CoreAudio
-  extra-libraries:  scsynth, stdc++
+  extra-libraries:  scsynth
 
 source-repository head
   type:             darcs
