--- a/bindings-sc3.cabal
+++ b/bindings-sc3.cabal
@@ -1,32 +1,30 @@
-name:               bindings-sc3
-version:            0.0.0
-synopsis:           Bindings to libscsynth.
-description:        Bindings to libscsynth.
-license:            GPL
-license-file:       LICENSE
-category:           Sound
-copyright:          Copyright (c) Stefan Kersten 2010
-author:             Stefan Kersten <sk@k-hornz.de>
-maintainer:         Stefan Kersten <sk@k-hornz.de>
-stability:          experimental
-homepage:           http://code.haskell.org/~StefanKersten/code/bindings-sc3
-tested-with:        GHC == 6.12
-build-type:         Simple
-cabal-version:      >= 1.6
+Name:                   bindings-sc3
+Version:                0.0.0
+Synopsis:               Bindings to the SuperCollider synthesis engine library.
+Description:            This library provides low level bindings to the SuperCollider synthesis engine library (@libscsynth@). If you are looking for a higher level Haskell interface, please use the hsc3-process package (<http://hackage.haskell.org/package/hsc3-process>).
+License:                GPL
+License-File:           LICENSE
+Category:               Sound
+Copyright:              Copyright (c) Stefan Kersten 2010
+Author:                 Stefan Kersten <sk@k-hornz.de>
+Maintainer:             Stefan Kersten <sk@k-hornz.de>
+Stability:              experimental
+Homepage:               http://space.k-hornz.de/software/hsc3-process/
+Tested-With:            GHC == 6.12
+Build-Type:             Simple
+Cabal-Version:          >= 1.6
 
-data-files:
-  README.md
+Data-Files:
+    README.md
 
-library
-  extensions:       ForeignFunctionInterface
-  exposed-modules:  Bindings.Sound.SC3
-  c-sources:		cbits/helper_functions.c
-  cc-options:		-c99
-  build-depends:    base >= 3 && < 5
-                  , bindings-DSL >= 1.0 && < 1.1
-  frameworks:       Carbon, CoreAudio
-  extra-libraries:  scsynth
+Library
+    Extensions:         ForeignFunctionInterface
+    Exposed-Modules:    Bindings.Sound.SC3
+    C-Sources:		    cbits/helper_functions.c
+    Build-Depends:      base >= 3 && < 5
+                      , bindings-DSL >= 1.0 && < 1.1
+    Extra-Libraries:    scsynth
 
-source-repository head
-  type:             darcs
-  location:         http://code.haskell.org/~StefanKersten/code/bindings-sc3
+Source-Repository head
+    Type:               git
+    Location:           git://github.com/kaoskorobase/hsc3-process.git
