--- a/bindings-sc3.cabal
+++ b/bindings-sc3.cabal
@@ -1,7 +1,21 @@
 Name:                   bindings-sc3
 Version:                0.3.0
 Synopsis:               Bindings to the SuperCollider synthesis engine library.
-Description:            This library provides low level bindings to the SuperCollider synthesis engine library (@libscsynth@). If you are looking for a higher level Haskell interface, please use the hsc3-process package (<http://hackage.haskell.org/package/hsc3-process>).
+Description:            This library provides low level bindings to the
+SuperCollider synthesis engine library (@libscsynth@). If you are looking for
+a higher level Haskell interface, please use the hsc3-process package
+(<http://hackage.haskell.org/package/hsc3-process>).
+
+In order to build this package, you need to first build the dynamic library
+version of SuperCollider <supercollider.sourceforge.net> by passing
+@-DLIBSCSYNTH=ON@ to @cmake@. Then build this library by passing the location
+of the SuperCollider header files and dynamic library directory to cabal:
+
+@
+    cabal install bindings-sc3 --extra-include-dirs=<SC_SOURCES>/include/{common,plugin_interface,server} --extra-library-dirs=$SC_SOURCES/server/scsynth
+@
+
+If you copy @libscsynth@ to a system library location, you may omit @--extra-library-dirs@.
 License:                GPL
 License-File:           LICENSE
 Category:               FFI, Sound
