Add SuperCollider API headers and don't depend on libscsynth

--- a/bindings-sc3.cabal
+++ b/bindings-sc3.cabal
@@ -1,29 +1,21 @@
 Name:                   bindings-sc3
-Version:                0.3.0
-Synopsis:               Bindings to the SuperCollider synthesis engine library.
+Version:                0.4.0
+Synopsis:               Low-level bindings to the SuperCollider synthesis engine library.
 Description:
     This library provides low level bindings to the SuperCollider synthesis
     engine library (@libscsynth@). If you are looking for a higher level
-    Haskell interface, please use the hsc3-process package
+    Haskell interface, please use the /hsc3-process/ package
     (<http://hackage.haskell.org/package/hsc3-process>).
     .
     ChangeLog: <https://github.com/kaoskorobase/bindings-sc3/blob/master/ChangeLog.md>
     .
-    In order to build this package, you need to first build the dynamic library
-    version of SuperCollider <supercollider.sourceforge.net> by passing
-    @-DLIBSCSYNTH=ON@ to @cmake@. Then build this library by passing the
-    location of the SuperCollider header files and dynamic library directory to
-    cabal:
+    In order to use this package, you need to build the dynamic library version
+    of SuperCollider <supercollider.sourceforge.net> by passing
+    @-DLIBSCSYNTH=ON@ to @cmake@. When linking an executable or running
+    a script with @runhaskell@ you need to link aginst the shared library
+    @libscsynth@.
     .
-    @
-    cabal install bindings-sc3 \
-        --extra-include-dirs=$SC_SOURCES/include/common \
-        --extra-include-dirs=$SC_SOURCES/include/plugin_interface \
-        --extra-include-dirs=$SC_SOURCES/include/server \
-        --extra-library-dirs=$SC_SOURCES/server/scsynth
-    @
-    .
-    If you copy @libscsynth@ to a system library location, you may omit @--extra-library-dirs@.
+    The required SuperCollider version is 3.5.
 License:                GPL
 License-File:           LICENSE
 Category:               FFI, Sound
@@ -33,7 +25,7 @@ Maintainer:             Stefan Kersten <sk@k-hornz.de>
 Stability:              experimental
 Homepage:               http://space.k-hornz.de/software/bindings-sc3/
 Bug-Reports:            http://github.com/kaoskorobase/bindings-sc3/issues/
-Tested-With:            GHC == 6.12
+Tested-With:            GHC == 6.12, GHC == 7.0, GHC == 7.2
 Build-Type:             Simple
 Cabal-Version:          >= 1.6
 
@@ -46,7 +38,7 @@ Library
     C-Sources:		    cbits/helper_functions.c
     Build-Depends:      base >= 3 && < 5
                       , bindings-DSL >= 1.0 && < 1.1
-    Extra-Libraries:    scsynth
+    Include-Dirs:       ./include
 
 Source-Repository head
     Type:               git
