--- a/bindings-sc3.cabal
+++ b/bindings-sc3.cabal
@@ -2,6 +2,8 @@ Name:                   bindings-sc3
 Version:                0.4.0
 Synopsis:               Low-level bindings to the SuperCollider synthesis engine library.
 Description:
+    DEPRECATED. This library is looking for a new maintainer.
+    .
     This library provides low level bindings to the SuperCollider synthesis
     engine library (@libscsynth@). If you are looking for a higher level
     Haskell interface, please use the /hsc3-process/ package
@@ -23,8 +25,8 @@ Copyright:              Copyright (c) Stefan Kersten 2010-2012
 Author:                 Stefan Kersten <sk@k-hornz.de>
 Maintainer:             Stefan Kersten <sk@k-hornz.de>
 Stability:              experimental
-Homepage:               http://space.k-hornz.de/software/bindings-sc3/
-Bug-Reports:            http://github.com/kaoskorobase/bindings-sc3/issues/
+Homepage:               https://github.com/kaoskorobase/bindings-sc3/
+Bug-Reports:            https://github.com/kaoskorobase/bindings-sc3/issues/
 Tested-With:            GHC == 6.12, GHC == 7.0, GHC == 7.2
 Build-Type:             Simple
 Cabal-Version:          >= 1.6
